test trigger for manual dispatch

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -139,6 +139,14 @@ jobs:
             done
           done
 
+      - name: Upload wheels as workflow artifacts (for testing)
+        if: github.event_name != 'release'
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.plat }}-py${{ matrix.python_version }}
+          path: dist/*
+          retention-days: 7
+
       - name: Upload wheels as GitHub Release assets
         if: github.event_name == 'release'
         uses: softprops/action-gh-release@v2
